--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,17 @@
     <groupId>ch.zhaw.splab.servicetooling</groupId>
     <artifactId>PodilizerProc</artifactId>
     <version>0.1</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.sun.tools</groupId>
+            <artifactId>tools</artifactId>
+            <version>${java.version}</version>
+            <scope>system</scope>
+            <systemPath>${java.home}/../lib/tools.jar</systemPath>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
