--- a/example/pom.xml
+++ b/example/pom.xml
@@ -14,7 +14,7 @@
         <main-class>app.Test</main-class>
   </properties>
 
-  
+
     <build>
         <plugins>
             <plugin>
@@ -30,6 +30,7 @@
                             <phase>process-sources</phase>
                             <configuration>
                                 <proc>none</proc>
+                                <outputDirectory>${generated.sources.directory}</outputDirectory>
                                 <processors>
                                     <processor>ch.zhaw.splab.podilizerproc.annotations.LambdaProcessor
                                     </processor>
@@ -68,7 +69,7 @@
         <dependencies>
             <dependency>
                 <groupId>ch.zhaw.splab.servicetooling</groupId>
-                <artifactId>PodilizerProc</artifactId>
+                <artifactId>Termite</artifactId>
                 <version>0.1</version>
             </dependency>
         </dependencies>
@@ -77,7 +78,7 @@
   <dependencies>
         <dependency>
             <groupId>ch.zhaw.splab.servicetooling</groupId>
-            <artifactId>PodilizerProc</artifactId>
+            <artifactId>Termite</artifactId>
         </dependency>
         <dependency>
             <groupId>org.aspectj</groupId>
